fix alignment home page

--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -32,7 +32,7 @@ header h1 {
 .home-job-card-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 
 .home-job-card {
